tests/baselines/reference/typeFromPropertyAssignment10(strict=true).errors.txt
application.js(9,19): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
main.js(6,1): error TS2454: Variable 'x' is used before being assigned.
someview.js(3,18): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== module.js (0 errors) ====
    var Outer = Outer || {};
    Outer.app = Outer.app || {};
    
==== someview.js (1 errors) ====
    Outer.app.SomeView = (function () {
        var SomeView = function() {
            var me = this;
                     ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
        }
        return SomeView;
    })();
    Outer.app.Inner = class {
        constructor() {
            /** @type {number} */
            this.y = 12;
        }
    }
    var example = new Outer.app.Inner();
    example.y;
    /** @param {number} k */
    Outer.app.statische = function (k) {
        return k ** k;
    }
==== application.js (1 errors) ====
    Outer.app.Application = (function () {
    
        /**
         * Application main class.
         * Will be instantiated & initialized by HTML page
         */
        var Application = function () {
            var me = this;
            me.view = new Outer.app.SomeView();
                      ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
        };
        return Application;
    })();
==== main.js (1 errors) ====
    var app = new Outer.app.Application();
    var inner = new Outer.app.Inner();
    inner.y;
    /** @type {Outer.app.Inner} */
    var x;
    x.y;
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    Outer.app.statische(101); // Infinity, duh
    